# learning_rust

./: CMakeLists.txt  Cargo.toml  README.md  pyproject.toml
python/: speed.ipynb
python/cmeans/: Makefile  README.md  cmeans.c  compare.py  plot.py  pywrapper.py
python/rsmeans/: README.md  __init__.py  pymeans.py  requirements.txt
python/tests/: test_all.py
src/: clustering.rs  lib.rs
src/python/: README.md  kmeans.py  test_kmeans.py
