[package]
name = "rsmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsmeans"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.8.0"
pyo3 = { version = "0.20", features = ["extension-module"] }
csv = "1.1.0"
counter = "0.5.7"
rand = "0.8.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-csv = "0.5.2"
numpy = "0.20.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
[[bin]]
name = "entrypoint"
path = "src/clustering.rs"
